Added Register+Forgot Page

--- a/Front/cilent/assets/css/forget-password.css
+++ b/Front/cilent/assets/css/forget-password.css
@@ -28,7 +28,7 @@ a {
 
 
 /*=============== LOGIN ===============*/
-.login {
+.forget-password {
     height: 100vh;
     display: flex;
     align-items: center;
@@ -39,7 +39,7 @@ a {
     background-position: top center;
 }
 
-.login-form {
+.forget-password-form {
     border: 1.5px solid #ffffff74;
     margin-inline: 1.5rem;
     padding: 38px 35px;
@@ -50,34 +50,34 @@ a {
     color: #fff;
 }
 
-.login-title {
+.forget-password-title {
     text-align: center;
     margin-bottom: 32px;
 }
 
-.login-content,
-.login-box {
+.forget-password-content,
+.forget-password-box {
     display: grid;
     font-size: 12px;
 }
 
-.login-content {
+.forget-password-content {
     row-gap: 30px;
     margin-bottom: 22px;
 }
 
-.login-box {
+.forget-password-box {
     grid-template-columns: max-content 1fr;
     align-items: center;
     column-gap: 12px;
     border-bottom: 1.5px solid #fff;
 }
 
-.login-icon {
+.forget-password-icon {
     font-size: 18px;
 }
 
-.login-input {
+.forget-password-input {
     width: 100%;
     padding-block: 0.6rem;
     background: none;
@@ -87,7 +87,7 @@ a {
 }
 
 
-.login-label {
+.forget-password-label {
     position: absolute;
     left: 0;
     top: 13px;
@@ -95,18 +95,18 @@ a {
 }
 
 
-.login-box:nth-child(2) input {
+.forget-password-box:nth-child(2) input {
     padding-right: 30px;
 }
 
-.login-check,
-.login-check-group {
+.forget-password-check,
+.forget-password-check-group {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.login-check {
+.forget-password-check {
     gap: 5px;
     margin-bottom: 18px;
     /* margin-bottom: 36px; */
@@ -114,21 +114,21 @@ a {
 
 
 
-.login-check-group {
+.forget-password-check-group {
     column-gap: 0.5rem;
 }
 
-.login-check-label {
+.forget-password-check-label {
     font-size: 14px;
 }
 
-.login-check-input {
+.forget-password-check-input {
     width: 12px;
     height: 12px;
 }
 
 
-.login-button {
+.forget-password-button {
     width: 100%;
     padding: 16px;
     cursor: pointer;
@@ -140,26 +140,26 @@ a {
     transition: all 0.5s ease;
 }
 
-.login-button:hover {
+.forget-password-button:hover {
     color: #fff;
     background-color: #d90000;
 }
 
-.login-button:active {
+.forget-password-button:active {
     background-color: #9a0101;
 }
 
 
-.login-register {
+.forget-password-register {
     text-align: center;
 }
 
-.login-register {
+.forget-password-register {
     font-size: 14px;
 }
 
-.login-register a,
-.login-forgot {
+.forget-password-register a,
+.forget-password-forgot {
     position: relative;
     color: #ffffff;
     font-weight: 500;
@@ -167,8 +167,8 @@ a {
 }
 
 
-.login-register a::after,
-.login-forgot::after {
+.forget-password-register a::after,
+.forget-password-forgot::after {
     content: '';
     position: absolute;
     bottom: -5px;
@@ -180,26 +180,24 @@ a {
     transition: width 0.3s ease, left 0.3s ease;
 }
 
-.login-forgot:hover::after,
-.login-register a:hover::after {
+.forget-password-forgot:hover::after,
+.forget-password-register a:hover::after {
     width: 100%;
     left: 0;
     opacity: 1;
 }
 
-.login-input:focus+.login-label {
+.forget-password-input:focus+.forget-password-label {
     top: -12px;
 
 }
 
-.login-input:not(:placeholder-shown).login-input:not(:focus)+.login-label {
+.forget-password-input:not(:placeholder-shown).forget-password-input:not(:focus)+.forget-password-label {
     top: -12px;
 }
 
 
-
-
-input {
+input{
     font-size: 16px;
 }
 
@@ -213,11 +211,11 @@ input[type="password"]::-ms-clear {
     visibility: hidden;
 }
 
-.login-box-input {
+.forget-password-box-input {
     position: relative;
 }
 
-.login-eye {
+.forget-password-eye {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -226,40 +224,39 @@ input[type="password"]::-ms-clear {
     z-index: 1;
 }
 
-.login-title {
+.forget-password-title {
     font-size: 20px;
 }
-
 
 /*=============== BREAKPOINTS ===============*/
 @media screen and (min-width: 1024px) {
 
-    .login-check {
+    .forget-password-check {
         margin-bottom: 36px;
     }
 
-
-    .login-title {
+    .forget-password-title {
         font-size: 24px;
     }
+    
 
-    .login-check-group {
+    .forget-password-check-group {
         column-gap: 0.5rem;
     }
 
 
-    .login-check-input {
+    .forget-password-check-input {
         width: 14px;
         height: 14px;
     }
 
 
-    .login-button {
+    .forget-password-button {
         margin-bottom: 32px;
     }
 
 
 
-
+ 
 
 }
