--- a/Front/cilent/assets/css/index.css
+++ b/Front/cilent/assets/css/index.css
@@ -216,19 +216,25 @@ header .header-info .page-list .pages-pc ul {
     margin-top: 10px;
     width: 80%;
     list-style: none;
-    background: #ffffff;
-    max-height: 450px;
-    overflow-y: scroll;
-    overflow-x: hidden;
     padding: 0 14px;
     transition: all 0.5s ease;
-    background: #000000c9;
     border: 1px solid #ffffff69;
-    backdrop-filter: blur(8px);
 
-
-    /* <-------------------------   */
+    position: relative; 
 }
+
+.searchs .search-list ul::before { 
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+    background: #000000c9;  
+    backdrop-filter: blur(8px);
+    z-index: -1; 
+}  
+
 
 .search-list .product-list .prod-name {
     display: flex;
